--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -1,83 +1,85 @@
 /* advantages */
 
 .advantages {
-    .title {
-        display: none;
-    }
+  .title {
+    display: none;
+  }
 
-    line-height: 1.7;
+  line-height: 1.7;
 }
 
 // =====MOBILE=====
 @media screen and (max-width: 767px) {
-    .section {
-        padding-top: 60px;
-    }
+  .section {
+    padding-top: 60px;
+  }
 }
 
 .advantages-logos {
-    text-align: center;
-    background-color: var(--third-bg-color);
-    margin-bottom: 30px;
-    padding: 25px 0;
-
+  text-align: center;
+  background-color: var(--third-bg-color);
+  margin-bottom: 30px;
+  padding: 25px 0;
 }
 
 .advantages-title {
-    text-align: center;
-    margin-bottom: 10px;
+  text-align: center;
+  margin-bottom: 10px;
 }
 
 .item-details p {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
-
 
 // =====TABLET=====
 @media screen and (min-width: 768px) {
-    .advantages-list {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
+  .advantages-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 
-        .item {
-            width: 354px;
-        }
+    .item {
+      width: 354px;
     }
+  }
+
+  .advantages-title {
+    text-align: start;
+  }
 }
 
 // =====DESKTOP=====
 @media screen and (min-width: 1200px) {
-    .advantages {
-        padding-bottom: 0;
+  .advantages {
+    padding-bottom: 0;
+  }
+
+  .advantages-list {
+    .item {
+      width: 270px;
     }
 
-    .advantages-list {
-        .item {
-            width: 270px;
-        }
-
-        .item+.item {
-            margin-left: 30px;
-        }
+    .item + .item {
+      margin-left: 30px;
     }
+  }
 
-    .advantages-title {
-        margin-bottom: 10px;
-    }
+  .advantages-title {
+    margin-bottom: 10px;
+  }
 
-    .advantages-logos {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 120px;
-        background-color: var(--third-bg-color);
-        border-radius: 4px;
-        margin-bottom: 30px;
-    }
+  .advantages-logos {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 120px;
+    background-color: var(--third-bg-color);
+    border-radius: 4px;
+    margin-bottom: 30px;
+  }
 
-    .item-details p {
-        margin-bottom: 0;
-    }
+  .item-details p {
+    margin-bottom: 0;
+  }
 }
